# xmlrpc-epi-debian

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.in
debian/: changelog  control  copyright  libxmlrpc-epi0-dbg.install  rules  watch
debian/upstream/: metadata
sample/: Makefile.am  Makefile.in
scripts/: cvs2cl.pl
src/: Makefile.am  Makefile.in  xmlrpc.c
