dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_SRCDIR([src/xmlrpc.h])
AM_INIT_AUTOMAKE(xmlrpc, 0.54.2)

LT_INIT

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
LT_INIT

AC_CONFIG_MACRO_DIR([m4])

dnl On Solaris, 64-bit libraries live in /path/lib/64 by default and for some
dnl reason unknown to me Sun's cc/ld don't know how to automatically find them
dnl even knowing we're building 64-bit.
dnl
dnl This should also work for gcc, but I'll have to double-check.

LIBDIR="lib"
if test "x$(uname -s)" = "xSunOS"; then
	echo "${CC} ${CFLAGS}" | grep "m64" > /dev/null 2>&1
	RETVAL=${?}

	if test ${RETVAL} -eq 0; then
		LIBDIR="lib/64"
	fi
fi

AC_CHECK_HEADERS([expat.h], [], [AC_MSG_ERROR([Sorry expat.h not found, is libexpat and libexpat-dev installed?])],[])
AC_CHECK_LIB(expat, XML_ParserCreate, [], [ AC_MSG_ERROR([libexpat.so not found])])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h unistd.h)
AC_CHECK_HEADER(iconv.h,[],[AC_MSG_ERROR([Sorry iconv.h not found, please ensure libiconv/libiconv-dev is installed])])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_STRFTIME

AC_CHECK_FUNCS(mktime strstr)

AC_OUTPUT
AC_CONFIG_FILES([src/Makefile Makefile sample/Makefile])
AC_OUTPUT

